@@ -1,3 +1,7 @@
+2005-03-23  Tom Tromey  <tromey@redhat.com>
+
+	* builtins.cc (lay_out_class): Lay out interfaces.
+
 2005-03-03  Tom Tromey  <tromey@redhat.com>
 
 	* tree.cc (visit_while): Annotate the loop, not the statements.
